Change History
==============

0.2 - Unreleased
----------------
- tox support.
- universal wheel support.

0.1 - 2016-04-09
----------------
- Initial release.